# 2d-info-projekt

./: README.md
graphics/: Cargo.toml
graphics/game-eng/: Cargo.toml
graphics/game-eng/src/: base.rs  framework.rs  indexing.wgsl  lib.rs  non_uniform_indexing.wgsl  state.rs  tex_array.rs  tex_array_old.rs
graphics/src/: lib.rs
graphics/test-lib/: Cargo.toml
graphics/test-lib/src/: main.rs
playground/: quadtree.ipynb  test-wgpu.py
