[package]
name = "game-eng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.4"
wgpu = "0.14.0"
log = "0.4.17"
env_logger = "0.9.1"
web-sys = "0.3.60"
pollster = "0.2"
bytemuck = {version = "1.12.1", features = ["derive"]}
async-executor = "1.4.1"
anyhow = "1.0"
cfg-if = "1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]